--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2020.0.0-M6</spring-cloud.version>
+		<spring-cloud-stream.version>3.1.0-RC1</spring-cloud-stream.version>
+		<spring-cloud-function.version>3.1.0-RC1</spring-cloud-function.version>
 	</properties>
 
 	<dependencies>
@@ -41,6 +43,20 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-function-dependencies</artifactId>
+				<version>${spring-cloud-function.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-stream-dependencies</artifactId>
+				<version>${spring-cloud-stream.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
