Upgrade to latest release

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.cloud.stream.default.producer.partitionKeyExpression=headers['partitionKey']
+#spring.cloud.stream.default.producer.partitionKeyExpression=headers['partitionKey']
